--- a/templates/shared/site_header_component.html
+++ b/templates/shared/site_header_component.html
@@ -85,8 +85,9 @@
                         <ul class="nav navbar-nav collapse navbar-collapse">
                             {% comment %}
                             <li><a href="{% url "home_page" %}" class="{% if request.resolver_match.url_name == 'home_page' %}active{% endif %} ">خـانه</a></li>
-                            <li><a href="{% url "products_list" %}" class="{% if request.resolver_match.url_name == 'products_list' %}active{% endif %} ">محصولات</a></li>
+                            <li><a href="{% url "products_list" %}" class="{% if request.resolver_match.url_name == 'products_list' %}active{% endif %} ">محصولات</a></li>{% endcomment %}
                             <li><a href="{% url 'articles_list' %}" class="{% if request.resolver_match.url_name == 'articles_list' %}active{% endif %} ">مقالات</a></li>
+                            {% comment %}
                             <li><a href="{% url 'about_page' %}" class="{% if request.resolver_match.url_name == 'about_page' %}active{% endif %} ">درباره مـا</a></li>
                             {% endcomment %}
                             <li><a href="{% url 'contact_us_page' %}" class="{% if request.resolver_match.url_name == 'contact_us_page' %}active{% endif %} ">تماس با مـا</a></li>
