--- a/user_module/templates/user_module/change_password_page.html
+++ b/user_module/templates/user_module/change_password_page.html
@@ -1,4 +1,4 @@
-{% extends 'shared/front/_layout.html' %}
+{% extends 'shared/_layout.html' %}
 
 {% block title %}
     تغییر کلمه عبور
@@ -28,7 +28,7 @@
                     </div><!--/sign up form-->
                 </div>
                 <div class="col-md-3">
-                    {% include 'user_module/front/includes/user_panel_menu_component.html' %}
+                    {% include 'user_module/includes/user_panel_menu_component.html' %}
                 </div>
             </div>
         </section>
