--- a/user_module/templates/user_module/edit_user_profile_page.html
+++ b/user_module/templates/user_module/edit_user_profile_page.html
@@ -1,4 +1,4 @@
-{% extends 'shared/front/_layout.html' %}
+{% extends 'shared/_layout.html' %}
 {% load render_partial %}
 
 {% block title %}
@@ -16,7 +16,7 @@
                 </form>
             </div>
             <div class="col-md-3">
-                {% include 'user_module/front/includes/user_panel_menu_component.html' %}
+                {% include 'user_module/includes/user_panel_menu_component.html' %}
             </div>
         </div>
     </div>
