--- a/user_module/templates/user_module/user_basket.html
+++ b/user_module/templates/user_module/user_basket.html
@@ -1,4 +1,4 @@
-{% extends 'shared/front/_layout.html' %}
+{% extends 'shared/_layout.html' %}
 {% load poll_extras %}
 
 {% block title %}
@@ -7,6 +7,6 @@
 
 {% block content %}
     <div id="order-detail-content">
-        {% include 'user_module/front/includes/user_basket_content.html' %}
+        {% include 'user_module/includes/user_basket_content.html' %}
     </div>
 {% endblock %}
