--- a/user_module/templates/user_module/user_dashboard.html
+++ b/user_module/templates/user_module/user_dashboard.html
@@ -1,4 +1,4 @@
-{% extends 'shared/front/_layout.html' %}
+{% extends 'shared/_layout.html' %}
 {% load render_partial %}
 
 {% block title %}
@@ -13,7 +13,7 @@
                 <p> this is user dashboard</p>
             </div>
             <div class="col-md-3">
-                {% include 'user_module/front/includes/user_panel_menu_component.html' %}
+                {% include 'user_module/includes/user_panel_menu_component.html' %}
             </div>
 
         </div>
