--- a/user_module/templates/user_module/user_last_orders_detail.html
+++ b/user_module/templates/user_module/user_last_orders_detail.html
@@ -1,4 +1,4 @@
-{% extends 'shared/front/_layout.html' %}
+{% extends 'shared/_layout.html' %}
 {% load render_partial %}
 {% load poll_extras %}
 
@@ -29,7 +29,7 @@
                 </table>
             </div>
             <div class="col-md-4">
-                {% include 'user_module/front/includes/user_panel_menu_component.html' %}
+                {% include 'user_module/includes/user_panel_menu_component.html' %}
             </div>
         </div>
     </div>
